--- a/locales/app/en.json
+++ b/locales/app/en.json
@@ -1,6 +1,7 @@
 {
   "action.auto": "Auto",
   "action.columns.setting": "Column Settings",
+  "action.map.explore": "Map Explore",
   "action.sort.mode": "Sort Mode",
   "action.tag.filter": "Tag Filter",
   "action.view.github": "View GitHub Repository",
@@ -206,6 +207,13 @@
   "exif.white.balance.shift.ab": "White Balance Shift (Amber-Blue)",
   "exif.white.balance.shift.gm": "White Balance Shift (Green-Magenta)",
   "exif.white.balance.title": "White Balance",
+  "explory.back.to.gallery": "Back to Gallery",
+  "explory.clear.selection": "Clear Selection",
+  "explory.explore.map": "Explore Map",
+  "explory.found.locations": "Found {{count}} shooting locations",
+  "explory.loading.map": "Loading Map...",
+  "explory.parsing.location": "Parsing photo location information",
+  "explory.shooting.range": "Shooting Range:",
   "gallery.built.at": "Built at ",
   "gallery.photos_one": "{{count}} photo",
   "gallery.photos_other": "{{count}} photos",
