feat(map): i18n in MapInfoPanel and MapSection components

--- a/locales/app/jp.json
+++ b/locales/app/jp.json
@@ -211,7 +211,10 @@
   "explory.explore.map": "マップを探索",
   "explory.found.locations": "{{count}} 個の撮影場所を発見",
   "explory.loading.map": "マップを読み込み中...",
+  "explory.map.error.description": "ネットワーク接続を確認するか、ページを更新して再試行してください",
+  "explory.map.error.title": "マップの読み込みに失敗しました",
   "explory.parsing.location": "写真の位置情報を解析中",
+  "explory.range.separator": "から",
   "explory.shooting.range": "撮影範囲：",
   "gallery.built.at": "ビルド日時 ",
   "gallery.photos_one": "写真{{count}}枚",
