--- a/locales/app/ko.json
+++ b/locales/app/ko.json
@@ -211,7 +211,10 @@
   "explory.explore.map": "지도 탐색",
   "explory.found.locations": "{{count}}개의 촬영 위치 발견",
   "explory.loading.map": "지도 로딩 중...",
+  "explory.map.error.description": "네트워크 연결을 확인하거나 페이지를 새로고침하여 다시 시도하십시오.",
+  "explory.map.error.title": "지도 로딩 실패",
   "explory.parsing.location": "사진 위치 정보 분석 중",
+  "explory.range.separator": "~",
   "explory.shooting.range": "촬영 범위:",
   "gallery.built.at": "빌드 날짜 ",
   "gallery.photos_one": "사진 {{count}}장",
