--- a/locales/app/en.json
+++ b/locales/app/en.json
@@ -212,7 +212,10 @@
   "explory.explore.map": "Explore Map",
   "explory.found.locations": "Found {{count}} shooting locations",
   "explory.loading.map": "Loading Map...",
+  "explory.map.error.description": "Please check your network connection or refresh the page to try again",
+  "explory.map.error.title": "Map Loading Failed",
   "explory.parsing.location": "Parsing photo location information",
+  "explory.range.separator": "to",
   "explory.shooting.range": "Shooting Range:",
   "gallery.built.at": "Built at ",
   "gallery.photos_one": "{{count}} photo",
