--- a/locales/app/zh-CN.json
+++ b/locales/app/zh-CN.json
@@ -212,7 +212,10 @@
   "explory.explore.map": "探索地图",
   "explory.found.locations": "发现了 {{count}} 个拍摄位置",
   "explory.loading.map": "加载地图中...",
+  "explory.map.error.description": "请检查网络连接或刷新页面重试",
+  "explory.map.error.title": "地图加载失败",
   "explory.parsing.location": "正在解析照片位置信息",
+  "explory.range.separator": "至",
   "explory.shooting.range": "拍摄范围：",
   "gallery.built.at": "构建于 ",
   "gallery.photos_one": "{{count}} 张照片",
