--- a/locales/app/zh-TW.json
+++ b/locales/app/zh-TW.json
@@ -211,7 +211,10 @@
   "explory.explore.map": "探索地圖",
   "explory.found.locations": "發現了 {{count}} 個拍攝位置",
   "explory.loading.map": "載入地圖中...",
+  "explory.map.error.description": "請檢查網路連線或重新整理頁面重試",
+  "explory.map.error.title": "地圖載入失敗",
   "explory.parsing.location": "正在解析照片位置資訊",
+  "explory.range.separator": "至",
   "explory.shooting.range": "拍攝範圍：",
   "gallery.built.at": "建置於 ",
   "gallery.photos_one": "{{count}} 張照片",
